--- a/apps/scraper/package.json
+++ b/apps/scraper/package.json
@@ -14,5 +14,9 @@
         "playwright": "^1.49.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
+    },
+    "devDependencies": {
+        "prettier": "^2.8.8",
+        "@types/prettier": "^2.7.3"
     }
 }
